--- a/package.json
+++ b/package.json
@@ -10,11 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.10.1",
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.2",
+    "formik": "^2.4.6",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-paper": "^5.12.5",
+    "react-native-permissions": "^4.1.5",
     "react-native-safe-area-context": "^4.11.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-screens": "^3.24.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.1.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
