--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.10.1",
     "@reduxjs/toolkit": "^2.2.7",
@@ -18,10 +19,13 @@
     "formik": "^2.4.6",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-animatable": "^1.4.0",
     "react-native-paper": "^5.12.5",
     "react-native-permissions": "^4.1.5",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.24.0",
+    "react-native-size-matters": "^0.4.2",
+    "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2",
     "yup": "^1.4.0"
